Practice 01 - Excercises 01-05 added

--- a/ITMO.ADO.NET-Practice01-Ex01/App.config
+++ b/ITMO.ADO.NET-Practice01-Ex01/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
+  <connectionStrings>
+    <add name="DBConnect.NorthwindConnectionString" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
 </configuration>
