--- a/ITMO.ADO.NET-Practice01-Ex01/ITMO.ADO.NET-Practice01-Ex01-02-03-04-05-DBConnection.csproj
+++ b/ITMO.ADO.NET-Practice01-Ex01/ITMO.ADO.NET-Practice01-Ex01-02-03-04-05-DBConnection.csproj
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -79,9 +80,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
