--- a/ITMO.ADO.NET-Practice/App.config
+++ b/ITMO.ADO.NET-Practice/App.config
@@ -1,9 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="ITMO.ADO.NET_Practice01_02.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
   <connectionStrings>
     <add name="DBConnect.NorthwindConnectionString" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient"/>
   </connectionStrings>
+  <userSettings>
+    <ITMO.ADO.NET_Practice01_02.Properties.Settings>
+      <setting name="LocalDB" serializeAs="String">
+        <value>Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=Northwind;Integrated Security=True</value>
+      </setting>
+    </ITMO.ADO.NET_Practice01_02.Properties.Settings>
+  </userSettings>
 </configuration>
