--- a/ITMO.ADO.NET-Practice-9.1-CourseManager/ITMO.ADO.NET-Practice-9.1-CourseManager.csproj
+++ b/ITMO.ADO.NET-Practice-9.1-CourseManager/ITMO.ADO.NET-Practice-9.1-CourseManager.csproj
@@ -73,8 +73,14 @@
     <Compile Include="GetStudentGrades_Result.cs">
       <DependentUpon>School.tt</DependentUpon>
     </Compile>
-    <Compile Include="OfficeAssignment.cs">
+    <Compile Include="Instructor.cs">
       <DependentUpon>School.tt</DependentUpon>
+    </Compile>
+    <Compile Include="OfficeAssignment.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OfficeAssignment.Designer.cs">
+      <DependentUpon>OfficeAssignment.cs</DependentUpon>
     </Compile>
     <Compile Include="OnlineCourse.cs">
       <DependentUpon>School.tt</DependentUpon>
@@ -107,6 +113,9 @@
     </Compile>
     <EmbeddedResource Include="CourseViewer.resx">
       <DependentUpon>CourseViewer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OfficeAssignment.resx">
+      <DependentUpon>OfficeAssignment.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
